# tennis-hawk-eye

./: .env.example  .gitignore  pyproject.toml  wrangler.jsonc
backend/: main.py
docs/: deploy-r2-cloudflare-pages.md
docs/superpowers/specs/: 2026-07-10-hawk-eye-control-room-context.md  2026-07-10-two-tab-control-room-design.md
frontend/: control-room.html  index.html  style.css
frontend/data/: clips-manifest.json
frontend/js/: app.js  control-room.js  presentation.js
scripts/: slice_clips.py  upload_clips_to_supabase.py
