[project]
name = "tennis-hawk-eye"
version = "0.1.0"
description = "Tennis In/Out Quiz Application"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.110.0",
    "uvicorn[standard]>=0.28.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-asyncio>=0.21",
]
scripts = [
    "httpx>=0.27",
]
